Test/exports/ExportImport.dfy.expect
ExportImport.dfy(34,15): Error: module B does not exist (position 0 in path B.BAO)
ExportImport.dfy(39,18): Error: module BAO does not exist (position 1 in path B.BAO)
ExportImport.dfy(48,18): Error: arguments must have comparable types (got DAO.T and bool)
ExportImport.dfy(51,18): Error: arguments must have comparable types (got DAO.T and B.TT)
4 resolution/type errors detected in ExportImport.dfy
